Add text color on sound list item.

--- a/app/src/main/res/layout/sound_item.xml
+++ b/app/src/main/res/layout/sound_item.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:text="Pouet"
         android:id="@+id/nameTextView"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_centerInParent="true" />
 
 </RelativeLayout>
