Add music icon while playing sound.

--- a/app/src/main/res/layout/sound_item.xml
+++ b/app/src/main/res/layout/sound_item.xml
@@ -14,4 +14,12 @@
         android:textStyle="bold"
         android:layout_centerInParent="true" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/musicImageView"
+        android:src="@drawable/dance"
+        android:visibility="gone"
+        android:layout_centerInParent="true" />
+
 </RelativeLayout>
