--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="cool_green_dark">#95AD32</color>
     <color name="light_grey">#F0F0F0</color>
     <color name="color_accent">#000</color>
+    <color name="red">#FF1C55</color>
+    <color name="yellow">#FFFF80</color>
+    <color name="blue">#0088FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
