Add nice animation.

--- a/app/src/main/res/layout/sound_item.xml
+++ b/app/src/main/res/layout/sound_item.xml
@@ -1,25 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="100dp"
     android:background="#FF0000"
     android:id="@+id/soundLayout" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pouet"
-        android:id="@+id/nameTextView"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/musicImageView"
-        android:src="@drawable/dance"
-        android:visibility="gone"
-        android:layout_centerInParent="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pouet"
+            android:id="@+id/nameTextView"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_centerInParent="true" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/musicImageView"
+            android:src="@drawable/dance"
+            android:visibility="gone"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".0"
+            android:background="#30ffffff"
+            android:id="@+id/progressLayout"
+            android:orientation="vertical"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".1"
+            android:id="@+id/remainingProgressLayout"
+            android:orientation="vertical"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
