--- a/app/src/main/res/layout/sound_item.xml
+++ b/app/src/main/res/layout/sound_item.xml
@@ -30,6 +30,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/progressContainerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal" >
